Bugzilla bug #41524: fixed build problems on NetBSD-current with ELF object format. r=taya@sm.sony.co.jp. a=brendan@mozilla.org. Modified files: NetBSD.mk, _netbsd.h, prlink.c (NSPRPUB_CLIENT_BRANCH)